# ninepatch

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  ninepatch.py  pyproject.toml  readme.md  setup.py
.github/workflows/: python-app.yml  python-package.yml
ninepatch/: __init__.py  ninepatch.py
ninepatch/test/: tests.py
src/ninepatch/: __init__.py
src/ninepatch/commands/: ninepatch.py  ninepatch_viewer.py
test/: tests.py
tests/: test_ninepatch.py  tests.py
