[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ninepatch"
version = "0.2.0"
authors = [
  { name="Thomas Schüßler", email="vindolin@gmail.com" },
]
description = "Slice and scale 9-patch images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vindolin/ninepatch"
"Bug Tracker" = "https://github.com/vindolin/ninepatch/issues"
